Scroll bar style fixed for Webkit browsers (Chrome, Opera, Safari etc); not currently feasible to fix the scrollbar style for Quantum broswers (Firefox, Tor, Brave etc)

--- a/Frontend/src/components/Message/Message.css
+++ b/Frontend/src/components/Message/Message.css
@@ -70,6 +70,19 @@
   background: rgb(243, 243, 243);
 }
 
+.messagesList::-webkit-scrollbar {
+  width: 1em;
+}
+
+.messagesList::-webkit-scrollbar-track {
+  box-shadow: inset 0px 0px 2px rgba(0, 0, 0, 1);
+}
+
+.messagesList::-webkit-scrollbar-thumb {
+  background-color: rgb(74, 92, 98);
+  border-color: rgb(36, 45, 48) rgb(63, 77, 81) rgb(63, 77, 81) rgb(36, 45, 48);
+}
+
 #ownMessage {
   background-image: linear-gradient(
     to left top,
